--- a/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
@@ -12,7 +12,7 @@
             <p class="vehicle-details-content__subtitle">Enter your vehicle details and proceed with your loan
                 application.</p>
         </header>
-        <form class="vehicle-form" [formGroup]="form" novalidate>
+        <form class="vehicle-form" [class.highlight-all-filled]="highlightAllFilled" [formGroup]="form" novalidate>
             <!-- Brand input + autocomplete -->
             <div class="form-row">
                 <label class="allLabel" for="brand">Brand <span class="required-mark-Brand"
@@ -121,78 +121,57 @@
             <div class="form-row dealer-row">
                 <label class="allLabel" for="dealer">Dealer <span class="required-mark"
                         style="color: red; padding-left:2px">*</span></label>
-                <div>
-                    <div class="dealer-controls" [class.filled]="isDealerFilled">
-                        <input type="text" class="dealer-input" readonly [value]="selectedDealer || ''"
-                            [class.filled-input]="isDealerFilled" placeholder="Select dealer"
-                            (click)="handleDealerControlTrigger(dealerOpen, $event)"
-                            (keydown.enter)="handleDealerControlTrigger(dealerOpen, $event)"
-                            (keydown.space)="handleDealerControlTrigger(dealerOpen, $event)" />
-                        <span class="icon-dropdown" aria-hidden="true">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path d="M7 10l5 5 5-5" stroke="#333" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
-                        </span>
-                        <button #dealerOpen id="dealerOpenBtn" type="button" class="dealer-dropdown-btn"
-                            (click)="onDealerModalButtonClick()" [class.filled]="isDealerFilled" data-bs-toggle="modal"
-                            data-bs-target="#dealerPicker" aria-label="Open dealer selector">
-                        </button>
-                    </div>
-                    @if (form.get('dealer')?.invalid && form.get('dealer')?.touched) {
-                    <div class="error">
-                        <span class="error-icon" aria-hidden="true">
-                            <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="7" cy="7" r="7" fill="#B40000" />
-                                <path
-                                    d="M6.41018 3H7.4399C7.67855 3 7.86681 3.20295 7.8489 3.44095L7.49909 8.08938C7.48299 8.30338 7.30468 8.46875 7.09009 8.46875H6.75997C6.54537 8.46875 6.36706 8.30335 6.35096 8.08938L6.00118 3.44095C5.98329 3.20295 6.17153 3 6.41018 3Z"
-                                    fill="#E9F3FB" />
-                                <path
-                                    d="M7.84875 3.44105L7.49875 8.08949C7.48289 8.30332 7.30434 8.46875 7.08996 8.46875H6.9248V3H7.43969C7.6784 3 7.86652 3.20289 7.84875 3.44105Z"
-                                    fill="#D6E9F8" />
-                                <path
-                                    d="M6.10547 10.3814V10.3842C6.10547 10.8365 6.47212 11.2031 6.92441 11.2031C7.37671 11.2031 7.74336 10.8365 7.74336 10.3842V10.3814C7.74336 9.92915 7.37671 9.5625 6.92441 9.5625C6.47212 9.5625 6.10547 9.92915 6.10547 10.3814Z"
-                                    fill="#E9F3FB" />
-                            </svg>
-                        </span>
-                        <span>This field is mandatory</span>
-                    </div>
-                    }
+                <div class="field-with-icon">
+                    <input type="text" class="dealer-input" readonly [value]="selectedDealer || ''"
+                        [class.filled-input]="isDealerFilled" placeholder="Select dealer"
+                        (click)="handleDealerControlTrigger(dealerOpen, $event)"
+                        (keydown.enter)="handleDealerControlTrigger(dealerOpen, $event)"
+                        (keydown.space)="handleDealerControlTrigger(dealerOpen, $event)" />
+                    <span class="icon-dropdown" aria-hidden="true">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 10l5 5 5-5" stroke="#333" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </span>
                 </div>
-            </div>
+                <button #dealerOpen id="dealerOpenBtn" type="button" class="dealer-dropdown-btn"
+                    (click)="onDealerModalButtonClick()" [class.filled]="isDealerFilled" data-bs-toggle="modal"
+                    data-bs-target="#dealerPicker" aria-label="Open dealer selector">
+                </button>
 
 
-            <!-- Dealer modal (searchable) -->
-            <div #dealerModal class="modal fade dealer-modal" id="dealerPicker" tabindex="-1"
-                aria-labelledby="dealerPickerLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered dealer-modal-dialog">
-                    <div class="modal-content dealer-modal-content">
-                        <div class="dealer-modal-header">
-                            <h2 class="dealer-modal-title" id="dealerPickerLabel">Select dealer</h2>
-                            <button type="button" class="dealer-modal-close" data-bs-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body dealer-modal-body">
-                            @if (filteredDealers.length) {
-                            <ul #dealerList class="dealer-list" role="listbox" tabindex="0"
-                                [attr.aria-activedescendant]="activeDealerOptionId" (focus)="onDealerListFocus()"
-                                (keydown)="onDealerListKeydown($event)">
-                                @for (dealer of filteredDealers; track dealer; let i = $index) {
-                                <li class="dealer-list-item" role="option" tabindex="-1"
-                                    [attr.id]="'dealer-option-' + i" [attr.aria-selected]="i === dealerHighlightIndex"
-                                    [class.focused]="i === dealerHighlightIndex" (focus)="dealerHighlightIndex = i"
-                                    (mouseenter)="dealerHighlightIndex = i" (keydown)="onDealerOptionKeydown($event, i)"
-                                    (click)="onDealerSelect(dealer)">
-                                    {{ dealer }}
-                                </li>
+                <!-- Dealer modal (searchable) -->
+                <div #dealerModal class="modal fade dealer-modal" id="dealerPicker" tabindex="-1"
+                    aria-labelledby="dealerPickerLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered dealer-modal-dialog">
+                        <div class="modal-content dealer-modal-content">
+                            <div class="dealer-modal-header">
+                                <h2 class="dealer-modal-title" id="dealerPickerLabel">Select dealer</h2>
+                                <button type="button" class="dealer-modal-close" data-bs-dismiss="modal"
+                                    aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body dealer-modal-body">
+                                @if (filteredDealers.length) {
+                                <ul #dealerList class="dealer-list" role="listbox" tabindex="0"
+                                    [attr.aria-activedescendant]="activeDealerOptionId" (focus)="onDealerListFocus()"
+                                    (keydown)="onDealerListKeydown($event)">
+                                    @for (dealer of filteredDealers; track dealer; let i = $index) {
+                                    <li class="dealer-list-item" role="option" tabindex="-1"
+                                        [attr.id]="'dealer-option-' + i"
+                                        [attr.aria-selected]="i === dealerHighlightIndex"
+                                        [class.focused]="i === dealerHighlightIndex" (focus)="dealerHighlightIndex = i"
+                                        (mouseenter)="dealerHighlightIndex = i"
+                                        (keydown)="onDealerOptionKeydown($event, i)" (click)="onDealerSelect(dealer)">
+                                        {{ dealer }}
+                                    </li>
+                                    }
+                                </ul>
+                                } @else {
+                                <div class="dealer-empty">No dealers match your selection.</div>
                                 }
-                            </ul>
-                            } @else {
-                            <div class="dealer-empty">No dealers match your selection.</div>
-                            }
+                            </div>
                         </div>
                     </div>
                 </div>
