Personal form validations and layout

--- a/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
@@ -2,8 +2,7 @@
 <!-- Space reserved for Navbar -->
 <div class="navbar-placeholder"></div>
 
-<!-- Space reserved for Step Tracker -->
-<div class="tracker-placeholder"></div>
+<app-tracker></app-tracker>
 
 <div class="vehicle-details-container">
     <h2>Vehicle details</h2>
@@ -46,6 +45,7 @@
             <span class="icon">&#9432;</span>
             <span>Please note:<br />The dealer list is populated as per the Pincode and brand you have entered.</span>
         </div>
+        <div class="form-actions-separator"></div>
         <div class="form-actions">
             <button type="button" class="save-btn">Save to Cart</button>
             <button type="submit" class="continue-btn">Continue</button>
