--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
@@ -1,127 +1,159 @@
-<app-tracker></app-tracker>
+<div class="tracker-above-form">
+  <app-tracker></app-tracker>
+</div>
 <!-- Drawer overlay displayed initially -->
 <app-drawer
-    [isOpen]="isDrawerOpen"
-    [selectedOption]="selectedOption"
-    [showError]="showError"
-    [isContentVisible]="isContentVisible"
-    (close)="onDrawerClose()"
-    (continue)="onDrawerContinue($event)"
-    (toggleContent)="onDrawerToggleContent()"
-    (optionChange)="onDrawerOptionChange($event)">
+  [isOpen]="isDrawerOpen"
+  [selectedOption]="selectedOption"
+  [showError]="showError"
+  [isContentVisible]="isContentVisible"
+  (close)="onDrawerClose()"
+  (continue)="onDrawerContinue($event)"
+  (toggleContent)="onDrawerToggleContent()"
+  (optionChange)="onDrawerOptionChange($event)">
 </app-drawer>
 
 
 
 <div class="form-container" [class.blurred]="isDrawerOpen">
-    <h2>Personal details</h2>
-    <p>Enter your personal details and start with your loan application.</p>
-
-    <div>
-    <label for="">Full Name on PAN Card <span class="required">*</span></label>
-        <br>
-        <input type="text" class="form-control" id="" placeholder="Enter full name as per PAN card" [(ngModel)]="fullName" [disabled]="!!fullNameFromDrawer">
-        @if (showErrors && !fullName.trim()) {
-            <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your full name</span></div>
-        }
-        <br>
-    <label>Select Gender <span class="required">*</span></label>
-        <br>
-        <div class="gender-selector">
-            <label>
-                <input type="radio" name="gender" value="male" class="gender-radio" [(ngModel)]="gender">
-                Male
-            </label>
-
-            <label>
-                <input type="radio" name="gender" value="female" class="gender-radio" [(ngModel)]="gender">
-                Female
-            </label>
-
-            <label>
-                <input type="radio" name="gender" value="third" class="gender-radio" [(ngModel)]="gender">
-                Third Gender
-            </label>
-        </div>
-        <br>
-
-    <label for="">Mobile Number <span class="required">*</span></label>
-        <br>
-                <input type="tel" class="form-control" id="" placeholder="Enter 10-digit mobile number" [(ngModel)]="mobile" maxlength="10">
-                @if (showErrors && mobile.length !== 10) {
-                    <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter valid 10-digit mobile number</span></div>
-                }
-        <br>
-    <label for="">Email Address</label>
-        <br>
-    <input type="email" class="form-control" id="" placeholder="Enter your email address" [(ngModel)]="email">
-        <br>
-        <label for="">Address</label>
-        <br>
-    <input type="text" class="form-control" id="" placeholder="Enter your address" [(ngModel)]="address">
-        <br>
-    <label for="">Date of Birth (DD/MM/YYYY) on PAN <span class="required">*</span></label>
-        <br>
-                <input type="date" class="form-control" id="" placeholder="Enter date of birth" [(ngModel)]="dob">
-                @if (showErrors && !dob) {
-                    <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your date of birth</span></div>
-                }
-        <br>
-    <label for="">PAN Card Number <span class="required">*</span> <img src="/Vector copy.svg" alt="PAN info" class="pan-info-icon" /></label>
-        <br>
-                <input type="text" class="form-control" id="" placeholder="Enter 10-character alphanumeric PAN" [(ngModel)]="pan" maxlength="10">
-                @if (showErrors && pan.trim().length !== 10) {
-                    <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your PAN card number</span></div>
-                }
-
-        <br>
-    <label for="">Employment Type (Salaried and Self-employed) <span class="required">*</span></label>
-        <br>
-    <select name="" id="" [(ngModel)]="employmentType" class="form-control">
-            <option value="" disabled selected>Select Employment Type</option>
-            <option value="salaried">Salaried</option>
-            <option value="self-employed">Self Employed</option>
-        </select>
-        <br>
-    <label for="">Current Residential PIN Code <span class="required">*</span></label>
-        <br>
-                <input type="text" class="form-control" id="" placeholder="Enter 6-digit current residential PIN code" [(ngModel)]="pincode" maxlength="6">
-                @if (showErrors && pincode.length !== 6) {
-                    <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your current residential PIN code</span></div>
-                }
-        <br>
-        <!-- after entering pincode and hit enter it should display city by default city should be Pune if pincode is 6 digit entered and if pincode is below 6 digit it should not display city field -->
-        @if (isPincodeValid()) {
-        <div>
-            <label for="">City</label>
-            <br>
-            <input type="text" class="form-control" id="" placeholder="City" value="Pune" disabled>
-            <br>
-        </div>
-        }
-                        <div class="consent-group">
-                    <label class="consent-item">
-                        <input type="checkbox" [(ngModel)]="tncAccepted" />
-                        <span>I have read, understood, and hereby accept the product <a href="#" class="link">Terms and Conditions.</a></span>
-                    </label>
-                            @if (showErrors && !tncAccepted) {<div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please accept Terms and Conditions</span></div>}
-                    <label class="consent-item">
-                        <input type="checkbox" [(ngModel)]="creditConsent" />
-                        <span>I hereby consent to receiving my credit information offered by TransUnion CIBIL Limited (TU CIBIL) ("Product") through Bajaj Finance Limited (referred to as the "Agent").</span>
-                    </label>
-                            @if (showErrors && !creditConsent) {<div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please provide credit information consent</span></div>}
-                    <label class="consent-item optional">
-                        <input type="checkbox" [(ngModel)]="marketingOptIn" />
-                        <span>I hereby expressly authorize BFL, its group companies, affiliates and/or business associates and their respective representatives to send me information about its/their promotional communications regarding fixed deposit, loans, insurance and their respective products and/or services ("Products/Services") by telephone calls / SMSs / emails / WhatsApp / bitly/ Chatbots/ In-App Notifications or any other electronic modes. <em>(Optional)</em></span>
-                    </label>
-                </div>
-                <div class="error-summary" *ngIf="showErrors && hasAnyErrors()">
-                    <img src="/Frame 1707485144.svg" alt="Error" class="error-icon" />
-                    <span>There are multiple errors on this screen</span>
-                </div>
-                <div class="button-row">
-                    <button type="button" class="btn-outline" (click)="saveToCart()">SAVE TO CART</button>
-                    <button type="button" class="btn-primary" (click)="onContinue()">CONTINUE</button>
-                </div>
-
+  <p class="p-title">Personal details</p>
+  @if (autoFetchFailed) {
+    <div class="fetch-error-banner">
+      <div class="fetch-icon-wrapper"><img src="/Frame 1707485144.svg" alt="Error"></div>
+      <span>Data fetch unsuccessful</span>
     </div>
+  }
+  <p class="p-discription">Enter your personal details and start with your loan application.</p>
+
+  <div class="form-field">
+    <label for="pan-input">Full Name on PAN Card <span class="required">*</span></label>
+    <input type="text" class="form-control" id="pan-input" placeholder="Enter full name" [(ngModel)]="fullName" (input)="onFullNameInput($event)" [disabled]="!!fullNameFromDrawer">
+    @if (showErrors && !fullName.trim()) {
+      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your full name</span></div>
+    }
+  </div>
+  <div class="form-field">
+    <label>Select Gender <span class="required">*</span></label>
+    <div class="gender-selector">
+      <label>
+        <input type="radio" name="gender" value="male" class="gender-radio" [(ngModel)]="gender">
+        Male
+      </label>
+      <label>
+        <input type="radio" name="gender" value="female" class="gender-radio" [(ngModel)]="gender">
+        Female
+      </label>
+      <label>
+        <input type="radio" name="gender" value="third" class="gender-radio" [(ngModel)]="gender">
+        Third Gender
+      </label>
+    </div>
+  </div>
+  <div class="form-field">
+    <label for="dob-input">Date of Birth <span class="required">*</span></label>
+    <input type="text" class="form-control" id="dob-input" placeholder="Enter date of birth" [(ngModel)]="dob" (focus)="($event.target.type='date')" (blur)="($event.target.type='text')">
+    @if (showErrors && !dob) {
+      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your date of birth</span></div>
+    }
+    @if (showErrors && dob && !isAgeValid()) {
+      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Age must be between 18 and 65 to apply</span></div>
+    }
+  </div>
+  <div class="form-field">
+    <label for="pan-number-input">PAN Card Number <span class="required">*</span> <img src="/Vector copy.svg" alt="PAN info" class="pan-info-icon" /></label>
+    <input type="text" class="form-control" id="pan-number-input" placeholder="Enter 10-character alphanumeric PAN" [(ngModel)]="pan" (input)="onPanInput($event)" maxlength="10">
+    @if (showErrors && !isPanValid()) {
+      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Invalid PAN card number. Please enter a valid 10-character alphanumeric PAN</span></div>
+    }
+  </div>
+  <div class="form-field">
+    <label for="employment-type-display">Employment Type (Salaried and Self-employed) <span class="required">*</span></label>
+    <div id="employment-type-display" class="form-control employment-display" (click)="openEmploymentModal()">
+      @if (!employmentType) {
+        <span class="placeholder1">Select employment type</span>
+      }
+      @if (employmentType==='salaried') {
+        <span>Salaried</span>
+      }
+      @if (employmentType==='self-employed') {
+        <span>Self Employed</span>
+      }
+      <img class="chevron" src="/Icon (Stroke).svg" alt="Chevron"/>
+    </div>
+    @if (showErrors && !employmentType) {
+      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please select employment type</span></div>
+    }
+    @if (employmentType === 'salaried') {
+      <div class="salary-field">
+        <label for="salary-input">Net Monthly Salary <span class="required">*</span></label>
+        <input id="salary-input" type="text" class="form-control" placeholder="Enter monthly take-home salary" [(ngModel)]="monthlySalary" (input)="onSalaryInput($event)">
+        @if (showErrors && !isSalaryValid()) {
+          <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter salary between 15000 to 75000</span></div>
+        }
+      </div>
+    }
+  </div>
+
+  @if (employmentModalOpen) {
+    <div class="employment-modal-wrapper" role="dialog" aria-modal="true">
+      <div class="employment-modal">
+        <div class="employment-modal-header">
+          <h5>Select employment type</h5>
+          <button type="button" class="close-x" (click)="closeEmploymentModal()" aria-label="Close">&times;</button>
+        </div>
+        <ul class="employment-options">
+          <li (click)="selectEmploymentType('self-employed')" [class.active]="employmentType==='self-employed'">Self employed</li>
+          <li (click)="selectEmploymentType('salaried')" [class.active]="employmentType==='salaried'">Salaried</li>
+        </ul>
+      </div>
+      <div class="employment-backdrop" (click)="closeEmploymentModal()"></div>
+    </div>
+  }
+  <div class="form-field">
+    <label for="pincode-input">Current Residential PIN Code <span class="required">*</span></label>
+    <input type="text" class="form-control" id="pincode-input" placeholder="Enter 6-digit current residential PIN code" [(ngModel)]="pincode" (input)="onPincodeInput($event)" maxlength="6">
+    @if (showErrors && !isPincodeValidLocal()) {
+      <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter a valid 6-digit PIN code</span></div>
+    }
+  </div>
+  @if (isPincodeValid()) {
+    <div class="form-field">
+      <label for="city-input">City</label>
+      <input type="text" class="form-control" id="city-input" placeholder="City" value="Pune" disabled>
+    </div>
+  }
+  <div class="consent-group">
+    <label class="consent-item" [ngClass]="{'tnc-error': showErrors && !tncAccepted}">
+      <input type="checkbox" [(ngModel)]="tncAccepted" (change)="onConsentChange()" />
+      <span>I have read, understood, and hereby accept the product <a target="_blank" href="https://www.bajajfinserv.in/tnc-retail-lending" class="link">Terms and Conditions.</a></span>
+    </label>
+    <hr>
+    <label class="consent-item" [ngClass]="{'tnc-error': showErrors && !creditConsent}">
+      <input type="checkbox" [(ngModel)]="creditConsent" (change)="onConsentChange()" />
+      <span>I hereby consent to receiving my credit information offered by TransUnion CIBIL Limited (TU CIBIL) ("Product") through Bajaj Finance Limited (referred to as the "Agent").</span>
+    </label>
+    <hr>
+    <label class="consent-item optional">
+      <input type="checkbox" [(ngModel)]="marketingOptIn" />
+      <span>I hereby expressly authorize BFL, its group companies, affiliates and/or business associates and their respective representatives to send me information about its/their promotional communications regarding fixed deposit, loans, insurance and their respective products and/or services ("Products/Services") by telephone calls / SMSs / emails / WhatsApp / bitly/ Chatbots/ In-App Notifications or any other electronic modes. <em><b>(Optional)</b></em></span>
+    </label>
+  </div>
+
+  <div class="button-separator"></div>
+    @if (showErrors && hasAnyErrors()) {
+    <div class="error-summary">
+      <img src="/Frame 1707485144.svg" alt="Error" class="error-icon" />
+      @if (!tncAccepted || !creditConsent) {
+        <span>Please accept our terms and conditions to proceed.</span>
+      }
+      @if (tncAccepted && creditConsent) {
+        <span>There are errors on this screen</span>
+      }
+    </div>
+  }
+  <div class="button-row">
+    <button type="button" class="btn-outline" (click)="saveToCart()">SAVE TO CART</button>
+    <button type="button" class="btn-primary" (click)="onContinue()">CONTINUE</button>
+  </div>
+
+</div>
