--- a/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.css
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.css
@@ -145,7 +145,7 @@
     font-weight: 500;
     letter-spacing: .15px;
     cursor: default !important;
-    pointer-events: none;
+    /* pointer-events removed to allow label interaction */
 }
 
 /* Inputs/selects */
@@ -305,6 +305,7 @@
 .autocomplete-list li {
     padding: 8px 12px;
     cursor: pointer;
+    /* pointer-events removed to allow list item interaction */
 }
 
 .suggestions-list li.focused,
@@ -368,6 +369,10 @@
     margin-left: -1.5px;
 }
 
+.required-mark-Brand {
+    color: red;
+}
+
 /* Icon inside search fields */
 .field-with-icon {
     position: relative;
@@ -392,7 +397,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    pointer-events: none;
     z-index: 2;
     color: #BDBDBD;
     width: 24px;
@@ -452,7 +456,7 @@
     width: 100%;
     box-sizing: border-box;
     flex-wrap: nowrap;
-    z-index: 120;
+    z-index: 2000;
 }
 
 .save-btn,
@@ -824,4 +828,9 @@
 .note-block.note-box,
 .note-icon {
     cursor: default !important;
+}
+
+/* Override Bootstrap modal-backdrop for dealer modal */
+.modal-backdrop {
+    display: none !important;
 }
